# Cargo-transportation-application

./: README.md  README.txt
SDI-Assignment-GUI-Design/: .cproject  .project  1ver.db  CMakeLists.txt  CMakeLists.txt.user.00a1d3a  CMakeLists.txt.user.6706893  CMakeLists.txt.user.801c728  CMakeLists.txt.user.8f5e4eb  CMakeLists.txt.user.de43df3  CMakeLists.txt.user.e440042  cargo_registration.cpp  cargo_registration.h  cargo_registration.ui  chat.cpp  chat_window.cpp  chat_window.h  chat_window.ui  company_cargosettings.cpp  company_cargosettings.h  company_cargosettings.ui  company_interface.cpp  company_interface.h  company_interface.ui  company_registration.cpp  company_registration.h  company_registration.ui  driver_acceptedcargos.cpp  driver_acceptedcargos.h  driver_acceptedcargos.ui  driver_cargosubmission.cpp  driver_cargosubmission.h  driver_cargosubmission.ui  driver_interface.cpp  driver_interface.h  driver_interface.ui  driver_lorryregistration.cpp  driver_lorryregistration.h  driver_lorryregistration.ui  driver_profile.cpp  driver_profile.h  (+24 more)
build-SDI-Assignment-GUI-Design-Desktop-Debug/: CMakeCache.txt  Makefile  SDI-Assignment-GUI-Design.cbp  cmake_install.cmake
build-SDI-Assignment-GUI-Design-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-753b39cd2f48c98fd297.json  cmakeFiles-v1-08a4519d6f3d1ea7aa7c.json  codemodel-v2-27f56cbc64326b717832.json  index-2023-04-17T11-06-09-0435.json  target-SDI-Assignment-GUI-Design-Debug-2711921048446c3a99a8.json  target-SDI-Assignment-GUI-Design_autogen-Debug-924169d0fbf6075f3606.json
build-SDI-Assignment-GUI-Design-Desktop-Debug/SDI-Assignment-GUI-Design_autogen/: mocs_compilation.cpp
build-SDI-Assignment-GUI-Design-Desktop-Debug/SDI-Assignment-GUI-Design_autogen/EWIEGA46WW/: moc_cargo_registration.cpp  moc_chat_window.cpp  moc_company_cargosettings.cpp  moc_company_interface.cpp  moc_company_registration.cpp  moc_driver_acceptedcargos.cpp  moc_driver_cargosubmission.cpp  moc_driver_interface.cpp  moc_driver_lorryregistration.cpp  moc_driver_profile.cpp  moc_driver_registration.cpp  moc_modify_lorry.cpp  moc_owner_interface.cpp  moc_owner_orderhistory.cpp  moc_owner_placecargo.cpp  moc_owner_profile.cpp  moc_welcomewindow.cpp
build-SDI-Assignment-GUI-Design-Desktop-Debug/SDI-Assignment-GUI-Design_autogen/include/: ui_cargo_registration.h  ui_chat_window.h  ui_company_cargosettings.h  ui_company_interface.h  ui_company_registration.h  ui_driver_acceptedcargos.h  ui_driver_cargosubmission.h  ui_driver_interface.h  ui_driver_lorryregistration.h  ui_driver_profile.h  ui_driver_registration.h  ui_modify_lorry.h  ui_owner_interface.h  ui_owner_orderhistory.h  ui_owner_placecargo.h  ui_owner_profile.h  ui_welcomewindow.h
